--- a/templates/altaformazione.html
+++ b/templates/altaformazione.html
@@ -15,8 +15,7 @@
             <br>
             <h1>Alta formazione</h1>
             <blockquote class="blockquote">
-                “La via per imparare è lunga se si procede per regole, breve e efficace se si procede per esempi.”
-(Lucio Anneo Seneca)
+                “... longum iter est per praecept, breve et efficax per exampla.”
             </blockquote>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
@@ -36,7 +35,7 @@
                     Nel 2019 e nel 2020 si sono svolte le prime due edizioni di una scuola estiva a vocazione principalmente 
                     internazionale dedicata ai manoscritti tardoantichi e medievali (415-1500) conservati presso l
                     a Biblioteca Capitolare di Verona. I corsi, alternando lezioni teoriche a esercitazioni pratiche 
-                    (hands-on labs), hanno offerto a giovani studiosi in formazione (scelti tra storici, paleografi, 
+                    (<i>hands-on labs</i>), hanno offerto a giovani studiosi in formazione (scelti tra storici, paleografi, 
                     filologi, archeologi e storici dell’arte) una irripetibile occasione per approfondire le proprie 
                     conoscenze direttamente sui materiali di una delle più antiche e meglio conservate biblioteche del 
                     medioevo occidentale.
@@ -45,8 +44,8 @@
                     programmi.
                 </p>
                 <p>
-                    <a href="https://www.dcuci.univr.it/documenti/Iniziativa/dall/dall383230.pdf" class="btn btn-info" role="button">Edizione 2019</a>
-                    <a href="https://docs.univr.it/documenti/Iniziativa/dall/dall775500.pdf" class="btn btn-info" role="button">Edizione 2020 </a>
+                    <a href="https://www.dcuci.univr.it/documenti/Iniziativa/dall/dall383230.pdf" class="btn btn-info" role="button" target="_blank">Edizione 2019</a>
+                    <a href="https://docs.univr.it/documenti/Iniziativa/dall/dall775500.pdf" class="btn btn-info" role="button" target="_blank">Edizione 2020 </a>
                 </p>
                         
               </div>
