--- a/templates/explore.html
+++ b/templates/explore.html
@@ -2,8 +2,42 @@
 {% block  body%}
 <br>
 <div class="container">
-<h1>Esplora i dati relativi alla collezione</h1>
+  <h2>Spagnolo (1863-1916)</h2> 
 
+  Nato il 16 gennaio 1863 a Badia Polesine (Rovigo), Antonio Spagnolo studiò al Seminario vescovile di Verona dopo essere stato accolto nell’Istituto maschile don Mazza di Verona; qui, una volta ordinato sacerdote nel 1886, insegnò per diversi anni, diventandone vicedirettore e quindi terzo successore di don Mazza, dal 1906 alla morte.
+  
+  Il 5 giugno 1894 fu eletto Prefetto (o vicebibliotecario) della Biblioteca Capitolare di Verona, titolo allora conferito a chi veniva investito del ruolo pur non facendo parte del Capitolo, succedendo a Giambattista Carlo Giuliari dopo la breve parentesi di Paolo Vignola (1892-1894). Spagnolo tenne questa carica, prodigandosi tra l’altro per l’apertura della Biblioteca agli studiosi anche a fronte di incomprensioni con il Capitolo, fino alla morte, nel 1916.
+  
+  Nell’attività di bibliotecario, dove si avvalse anche del supporto di Carlo Cipolla, Spagnolo si dedicò allo studio di alcuni manoscritti e alla storia della Biblioteca, ma, soprattutto, alla redazione di un catalogo generale dei manoscritti qui conservati e alla schedatura dei libri a stampa. Tra i suoi scritti, utili alla storia della Capitolare, si segnala la Storia letteraria della Biblioteca Capitolare di Verona per gli anni 1896-1900, uscita su «Nuovo Archivio Veneto», prosecuzione ideale di quella redatta da Giambattista Carlo Giuliari.
+  
+  <h2>Catalogo descrittivo di Antonio Spagnolo</h2> 
+  
+  Antonio Spagnolo si accinse fin dai primi anni del suo incarico a redigere un catalogo dei manoscritti della Capitolare. Egli poteva giovarsi di precedenti lavori, tra gli altri i cataloghi curati da Giambattista Carlo Giuliari (codd. MXLIII-MXLV, a cui si aggiungono le note paleografiche, codd. MXLVI-MXLVII) e da Antonio Masotti (codd. MXL-MXLII), che aveva trascritto anche un repertorio di Scipione Maffei (Bibliotheca veronensis manuscripta, codd. DCCCCLXII-DCCCCLXXIII). Il suo lavoro, basato in parte su indicazioni provenienti dalla Biblioteca Vaticana, vide però la stampa solo in anni molto recenti (1993), per cura di Silvia Marchi, forse anche per le critiche che erano venute a Spagnolo dalla stessa Vaticana.
+  
+  Il catalogo manoscritto è suddiviso in tre volumi rilegati; in ogni scheda Spagnolo riporta il numero identificativo del codice (a cui segue il riferimento alla numerazione precedente), titolo, una descrizione esterna di massima (materia, datazione, dimensioni, numero di carte, definizione della scrittura e presenza di elementi decorativi, eventuali indicazioni sullo stato di conservazione e sulla storia del manoscritto) a cui segue una descrizione del contenuto (autore, talvolta incipit ed explicit, segnalazione di postille e di eventuali edizioni a stampa).
+  
+  <h2>I cataloghi seguenti</h2>
+  
+  I manoscritti entrati in Capitolare successivamente al 1916 sono elencati succintamente in un Supplemento al Catalogo manoscritti di D.A. Spagnolo, compilato prevalentemente da monsignor Giuseppe Turrini nel 1969 con note aggiunte di altre mani ed edito sempre a cura di Silvia Marchi in appendice al catalogo di Spagnolo (da MCXV a MCCLXXXIII). Oltre a questo, esiste un quaderno manoscritto (Secondo supplemento al catalogo descrittivo dello Spagnolo) che elenca gli ingressi più recenti (da MCCLXXXIV a MCCCXIII) e non è stato oggetto di edizione. Il primo è indicato nel database come “Suppl. allo Spagnolo”; il secondo come “S” (individuare altre abbreviazioni?); nel primo caso il riferimento alla pagina è comunque alla versione a stampa; nel secondo al manoscritto.
+  
+  La versione elettronica del Catalogo descrittivo di Antonio Spagnolo
+  
+  La versione elettronica del catalogo qui consultabile è da intendersi come strumento volto meramente all’identificazione univoca della corrispondenza tra codice, numerazione e collocazione; i dati qui consultabili sono pertanto limitati strettamente a questi elementi, riportati nella forma utilizzata da Spagnolo: numero identificativo ed eventuale riferimento alla precedente numerazione; collocazione attuale (tra parentesi quadre qualora non sia riportata nel codice); titolo ed eventuale autore; materiale; rilegatura; datazione (riportata in millesimi: post/ante); eventuali note; pagina della versione a stampa dello stesso catalogo.
+  
+  Questa versione del catalogo, oltreché fornire la possibilità di effettuare ricerche entro questi campi ed accedere all’eventuale digitalizzazione del codice, è scaricabile in formato .pdf.
+  
+  <h5>Bibliografia</h5>
+  <ol>
+  <li>G.B.C. GIULIARI, La Capitolare biblioteca di Verona, ristampa dell’edizione 1888 a cura di G.P. Marchi, Verona 1993</li>
+  
+  <li>G. TURRINI, D. Antonio Spagnolo prefetto della Biblioteca Capitolare di Verona (1894-1916), Verona 1941</li>
+  
+  <li>G.P. MARCHI, Don Antonio Spagnolo e il catalogo descrittivo dei manoscritti capitolari, in I manoscritti della Biblioteca Capitolare di Verona. Catalogo descrittivo redatto da don Antonio Spagnolo, a cura di S. Marchi, Verona 1996, pp. 24-41</li>
+  
+  <li>G. VOLPATO, Spagnolo Antonio, in Dizionario biografico dei veronesi (secolo XX), a cura di G.F. Viviani, Verona 2006, II, pp. 771-773</li>
+  
+  <li>D. CERVATO, «Tunica Christi». Preti veronesi del Novecento, Verona 2010, p. 134</li>
+</ol>
 <h4>Ricerca basata sui dati del Catalogo di don Spagnolo.</h1>
 
 <p>
