--- a/templates/index2.html
+++ b/templates/index2.html
@@ -24,9 +24,20 @@ window.onload = function(){
         dottorandi. Sono attivi accordi di scambio e collaborazione con enti e atenei 
         di altre parti d’Italia.
       </p>
+      <div class="row">
+        <div class="img col">
+          <img class="img-fluid" src={{url_for('static',filename='imgs/logounivr400.png')}} alt="Disegno esemplificativo con i nomi dei partecipanti del progetto.">  
+        </div>
+        <div class="img col">
+          <a href=http://bibliotecacapitolare.org/en/the-biblioteca-capitolare-of-verona/>
+          <img class="img-fluid" src={{url_for('static',filename='imgs/logocapitolare.png')}} alt="Disegno esemplificativo con i nomi dei partecipanti del progetto.">
+        </a>  
+        </div>
+      </div>
       <p>
         Per saperne di più visita la <a href="/about">pagina dedicata</a>.
       </p>
+
  <!--   <p> L'<a href=https://www.univr.it/it/>Università di Verona</a> in collaborazione con la <a href=http://bibliotecacapitolare.org/en/the-biblioteca-capitolare-of-verona/>Fondazione Biblioteca Capitolare </a>
         ha iniziato una campagna di analisi, digitalizzazione e valorizzazione
         dei beni culturali contenuti all'interno della Biblioteca Capitolare di Verona.
@@ -35,7 +46,7 @@ window.onload = function(){
         Questo sito ospita le risorse digitali del progetto.</p> -->
     </div>
     <div class="img col-lg-6 col-md-12 col-12">
-      <img class="img-fluid" src={{url_for('static',filename='imgs/unispiralecolori.svg')}} alt="Disegno esemplificativo con i nomi dei partecipanti del progetto.">  
+      <img class="img-fluid" src={{url_for('static',filename='imgs/unispiralecolori_ns.svg')}} alt="Disegno esemplificativo con i nomi dei partecipanti del progetto.">  
     </div>
   </div>
 </section>
@@ -46,14 +57,40 @@ window.onload = function(){
       <img class="img-fluid" src={{url_for('static',filename="imgs/disegno_spagnoloarchivio_colori.svg")}}  alt="Grafico rappresentante le dimensioni ed il numero dei beni contenuti nella collezione."></script>      
     </div>
     <div class="text col-lg-6 col-md-12 order-first col-12">
-      <h1>Tra antico e innovazione.</h1>
-      <p> Nella prima fase del progetto abbiamo progettato un nuovo sistema avanzato di catalogazione.
+      <!-- <h1>Tra antico e innovazione.</h1> -->
+      <p>
+      Il sito capitolar-e mette a disposizione ad accesso aperto la digitalizzazione di risorse della Biblioteca Capitolare di Verona: un aggiornato catalogo dei manoscritti associato alle riproduzioni dei codici, il catalogo storico dei manoscritti e l’archivio del Capitolo dei canonici e di altri fondi qui conservati.
+      <br>
+      <h5>Nuovo catalogo digitale </h5>
+        Il nuovo catalogo digitale, realizzato secondo i più aggiornati standard scientifici, è il cuore del progetto. 
+        La visualizzazione delle riproduzioni ad altissima definizione avviene attraverso le 
+        sue schede, che permettono di identificare tutte le unità interne dei codici e di 
+        accedervi direttamente. Oltre alle riproduzioni ad altissima definizione e
+         multispettrali, vengono rese disponibili anche le digitalizzazioni di precedenti 
+         campagne di riproduzione.
+        <br>
+        <h5><a href="/esplora">Catalogo storico </a></h5>
+        Il catalogo storico metta a disposizione i principali dati identificativi dei 
+        manoscritti della Capitolare, così come erano stati descritti da Antonio Spagnolo 
+        alla fine del XIX secolo, collegandoli alle loro riproduzioni digitali. Il catalogo
+        storico di Spagnolo, assieme alle sue prosecuzioni, è uno strumento che risulta 
+        tutt’oggi indispensabile per l’identificazione dei codici.
+        <br>
+        <h5><a href="/archivio"> Archivio </a> </h5>
+        La digitalizzazione dell’archivio del Capitolo del canonici, basato per ora sulle 
+        schede del Codice digitale degli archivi veronesi, permette di ricercare e 
+        visualizzare i documenti qui conservati, risalenti per le pergamene più antiche
+        all’VIII secolo. Il progetto prevede di estendere questa sezione anche ad altri
+        fondi conservati nella Biblioteca Capitolare, tra cui l’archivio dello storico
+        Luigi Simeoni.
+      </p>
+      <!-- <p> Nella prima fase del progetto abbiamo progettato un nuovo sistema avanzato di catalogazione.
         Abbiamo inoltre cominciato a rendere disponibili i dati raccolti nelle precedenti campagne di catalogazione (Catalogo storico di Antonio Spagnolo) 
         e digitalizzazione (<i><a href="https://cdavr.dtesis.univr.it">Codice digitale degli archivi veronesi</a></i>, a cura di Andrea Brugnoli).
 
         Esplora i dati della catalogazione antica <a href="/esplora">usando l'applicazione interattiva</a>.
         
-       </p>
+       </p> -->
     </div>
   </div>
 </section>
