--- a/static/custom.css
+++ b/static/custom.css
@@ -318,7 +318,22 @@ tr:nth-of-type(odd) {
     height: auto;
   }
 
+ 
 .error-template {padding: 40px 15px;text-align: center;}
 .error-actions {margin-top:15px;margin-bottom:15px;}
 .error-actions .btn { margin-right:10px; }
-  
+
+
+.containerX {
+  padding-top: 100%; /* 1:1 Aspect Ratio */
+}
+
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
