Fix bug e tentativo bokeh archivio

--- a/templates/about.html
+++ b/templates/about.html
@@ -58,7 +58,7 @@ gratuitamente a disposizione di tutti gli utenti che si registreranno presso la 
         <section id="illaboratorio" class="illaboratorio  py-5 ">
             <div class="row align-items-center container py-5 mx-auto">
                 <div class="img col-lg-6 col-md-12 col-12">
-                    <iframe class="img-fluid" src={{url_for('static',filename='imgs/lab_1.jpeg')}} alt="Immagine del laboratorio, e del sistema di digitalizzazione.">   
+                    <img class="img-fluid" src={{url_for('static',filename='imgs/lab_1.jpeg')}} alt="Immagine del laboratorio, e del sistema di digitalizzazione.">   
                   </div>
                   <div class="text col-lg-6 col-md-12 col-12">
                     <h6>ANALIZZARE E DIGIALIZZARE I CODICI</h6>
@@ -94,5 +94,6 @@ gratuitamente a disposizione di tutti gli utenti che si registreranno presso la 
          </section>
         <div>
     </div>
+</div>
 </div>
 {% endblock body %}
