--- a/templates/altaformazione.html
+++ b/templates/altaformazione.html
@@ -58,7 +58,7 @@
         <section id="master" class="illaboratorio  py-5 ">
             <div class="row align-items-center container py-5 mx-auto">
                 <div class="img col-lg-6 col-md-12 col-12">
-                    <img class="img-fluid" src=http://lezioni.meneghetti.univr.it//imageapi/41/m0041_0visn18_0012a1.jp2/pct:27.50,10.00,34.50,70.67/full/0/default.jpg alt="Immagine del laboratorio, e del sistema di digitalizzazione.">   
+                    <img class="img-fluid" src=http://lezioni.meneghetti.univr.it//imageapi/41/m0041_0visn18_0012a1.jp2/pct:27.50,10.00,34.50,70.67/pct:30/0/default.jpg alt="Immagine del laboratorio, e del sistema di digitalizzazione.">   
                   </div>
                   <div class="text col-lg-6 col-md-12 col-12">
                     <h6>MASTER DI SECONDO LIVELLO</h6>
