Aggiunte immagini cambiata query DB

--- a/templates/explore.html
+++ b/templates/explore.html
@@ -20,24 +20,13 @@
   
   I manoscritti entrati in Capitolare successivamente al 1916 sono elencati succintamente in un Supplemento al Catalogo manoscritti di D.A. Spagnolo, compilato prevalentemente da monsignor Giuseppe Turrini nel 1969 con note aggiunte di altre mani ed edito sempre a cura di Silvia Marchi in appendice al catalogo di Spagnolo (da MCXV a MCCLXXXIII). Oltre a questo, esiste un quaderno manoscritto (Secondo supplemento al catalogo descrittivo dello Spagnolo) che elenca gli ingressi più recenti (da MCCLXXXIV a MCCCXIII) e non è stato oggetto di edizione. Il primo è indicato nel database come “Suppl. allo Spagnolo”; il secondo come “S” (individuare altre abbreviazioni?); nel primo caso il riferimento alla pagina è comunque alla versione a stampa; nel secondo al manoscritto.
   
-  La versione elettronica del Catalogo descrittivo di Antonio Spagnolo
+  <h2>La versione elettronica del Catalogo descrittivo di Antonio Spagnolo</h2>
   
   La versione elettronica del catalogo qui consultabile è da intendersi come strumento volto meramente all’identificazione univoca della corrispondenza tra codice, numerazione e collocazione; i dati qui consultabili sono pertanto limitati strettamente a questi elementi, riportati nella forma utilizzata da Spagnolo: numero identificativo ed eventuale riferimento alla precedente numerazione; collocazione attuale (tra parentesi quadre qualora non sia riportata nel codice); titolo ed eventuale autore; materiale; rilegatura; datazione (riportata in millesimi: post/ante); eventuali note; pagina della versione a stampa dello stesso catalogo.
   
   Questa versione del catalogo, oltreché fornire la possibilità di effettuare ricerche entro questi campi ed accedere all’eventuale digitalizzazione del codice, è scaricabile in formato .pdf.
   
-  <h5>Bibliografia</h5>
-  <ol>
-  <li>G.B.C. GIULIARI, La Capitolare biblioteca di Verona, ristampa dell’edizione 1888 a cura di G.P. Marchi, Verona 1993</li>
-  
-  <li>G. TURRINI, D. Antonio Spagnolo prefetto della Biblioteca Capitolare di Verona (1894-1916), Verona 1941</li>
-  
-  <li>G.P. MARCHI, Don Antonio Spagnolo e il catalogo descrittivo dei manoscritti capitolari, in I manoscritti della Biblioteca Capitolare di Verona. Catalogo descrittivo redatto da don Antonio Spagnolo, a cura di S. Marchi, Verona 1996, pp. 24-41</li>
-  
-  <li>G. VOLPATO, Spagnolo Antonio, in Dizionario biografico dei veronesi (secolo XX), a cura di G.F. Viviani, Verona 2006, II, pp. 771-773</li>
-  
-  <li>D. CERVATO, «Tunica Christi». Preti veronesi del Novecento, Verona 2010, p. 134</li>
-</ol>
+
 <h4>Ricerca basata sui dati del Catalogo di don Spagnolo.</h1>
 
 <p>
@@ -70,6 +59,19 @@ Il colore grigio indica invece, che il campo non è disponibile.
   };
 xhr.send();
 </script>
+
+<h5>Bibliografia</h5>
+<ol>
+<li>G.B.C. GIULIARI, La Capitolare biblioteca di Verona, ristampa dell’edizione 1888 a cura di G.P. Marchi, Verona 1993</li>
+
+<li>G. TURRINI, D. Antonio Spagnolo prefetto della Biblioteca Capitolare di Verona (1894-1916), Verona 1941</li>
+
+<li>G.P. MARCHI, Don Antonio Spagnolo e il catalogo descrittivo dei manoscritti capitolari, in I manoscritti della Biblioteca Capitolare di Verona. Catalogo descrittivo redatto da don Antonio Spagnolo, a cura di S. Marchi, Verona 1996, pp. 24-41</li>
+
+<li>G. VOLPATO, Spagnolo Antonio, in Dizionario biografico dei veronesi (secolo XX), a cura di G.F. Viviani, Verona 2006, II, pp. 771-773</li>
+
+<li>D. CERVATO, «Tunica Christi». Preti veronesi del Novecento, Verona 2010, p. 134</li>
+</ol>
 </div>
 {% endblock  %}
 
